캡슐모달, 행성 카드 데이터 디자인 수정

--- a/src/pages/Card/Planet.module.sass
+++ b/src/pages/Card/Planet.module.sass
@@ -33,10 +33,9 @@
         
         .planet-img
             border: 1px solid grey
-            padding: 7px 10px
+            padding: 10px
             box-sizing: border-box
             border-radius: 100%
-            margin-left:5px
 
         .planet-text
             width: 69%
