--- a/src/components/UI/Modal/CapsulModal.module.sass
+++ b/src/components/UI/Modal/CapsulModal.module.sass
@@ -10,17 +10,19 @@
         border: 1px solid grey
         border-radius: 2px
         display: flex
-        padding: 10px 20px
+        padding: 10px 15px
         box-sizing: border-box
         align-items: center
         justify-content: space-between
 
         .capsul-img
+            display: flex
+            justify-content: center
+            align-items: center
             border: 1px solid grey
-            padding: 7px 10px
+            padding: 10px
             box-sizing: border-box
             border-radius: 100%
-            margin-left:5px
         
         .capsul-text
             width: 69%
