--- a/src/pages/Card/SelectedTime.module.sass
+++ b/src/pages/Card/SelectedTime.module.sass
@@ -3,16 +3,16 @@
     display: flex
     align-item: center
     flex-direction: column
-    padding: 0 20px
     box-sizing: border-box
 
     .week, .month, .year, .random
+        width: 100%
+        height: 40px
         display: flex
         justify-content: center
-        align-item: center
-        border: 1px solid grey
+        align-items: center
         margin: 10px 0
-        padding: 20px 40px
+        border: 1px solid grey
         box-sizing: border-box
 
     .select
