--- a/src/components/layouts/Input/Input.module.sass
+++ b/src/components/layouts/Input/Input.module.sass
@@ -7,3 +7,14 @@
 
   &:focus
     outline: none
+
+.view-two__input
+  width: 100%
+  height: 45px
+  border: 2px solid rgba(0,0,0,0.2)
+  padding-left: 5px
+  box-sizing: border-box
+  margin-bottom: 10px
+  
+  &:focus
+    outline: none
