--- a/src/components/layouts/Button/Button.module.sass
+++ b/src/components/layouts/Button/Button.module.sass
@@ -12,3 +12,18 @@
 .view-two_next--btn
     width: 100%
     height: 35px
+
+
+
+.week, .month, .year, .random
+    width: 100%
+    height: 40px
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 10px 0
+    border: 1px solid grey
+    box-sizing: border-box
+
+.select
+    background-color: red
