Add Recycle Button Component

--- a/src/pages/View/ViewThree.module.sass
+++ b/src/pages/View/ViewThree.module.sass
@@ -24,5 +24,8 @@
             font-size: 18px
 
 
-    .view-three__footer
+    .view-three__selected-time
+        margin-top: 50px
+    
+    .view-three__footer-btn
         margin-top: 50px
