--- a/src/components/layouts/Button/Button.module.sass
+++ b/src/components/layouts/Button/Button.module.sass
@@ -1,35 +1,46 @@
-.change_planet, .next_btn
-    width: 100%
-    height: 35px
-    margin-bottom: 10px
-    border-radius: 5px
-    border: none
-    background-color: #a744ea
-    color: white
-    font-weight: bold
+.change_planet, .next_btn, .auth
+  width: 100%
+  padding-top: 1rem
+  padding-bottom: 1rem
+  border-radius: 5px
+  border: none
+  background-color: #a744ea
+  color: white
+  font-weight: bold
+  cursor: pointer
 
 .view-two_next--btn
-    width: 100%
-    height: 35px
+  width: 100%
+  height: 35px
 
 .week, .month, .year, .random
-    width: 100%
-    height: 40px
-    display: flex
-    justify-content: center
-    align-items: center
-    margin: 10px 0
-    border: 1px solid grey
-    box-sizing: border-box
+  width: 100%
+  height: 40px
+  display: flex
+  justify-content: center
+  align-items: center
+  margin: 10px 0
+  border: 1px solid grey
+  box-sizing: border-box
 
 .select
-    background-color: red
+  background-color: red
 
 .view-three_next--btn, .view-four_next--btn, .view-five__nextHome
-    width: 100%
-    height: 35px
-    background-color: #a744ea
-    border: none
-    border-radius: 5px
-    color: white
-    font-weight: bold
+  width: 100%
+  height: 35px
+  background-color: #a744ea
+  border: none
+  border-radius: 5px
+  color: white
+  font-weight: bold
+
+.newVisitor
+  width: 100%
+  padding-top: 1rem
+  padding-bottom: 1rem
+  border-radius: 5px
+  border: 1px solid #a744ea
+  background-color: #ffffff
+  color: #a744ea
+  cursor: pointer
