--- a/src/components/layouts/Input/Input.module.sass
+++ b/src/components/layouts/Input/Input.module.sass
@@ -1,7 +1,7 @@
 .Auth
   padding: 1rem
   border-style: solid
-  border-radius: 0.5rem
+  border-radius: 5px
   border-color: #cdcdcd
   border-width: 1px
 
