--- a/src/components/Card/SelectedTime.module.sass
+++ b/src/components/Card/SelectedTime.module.sass
@@ -7,13 +7,14 @@
   
   .week, .month, .year, .random
     width: 100%
-    height: 40px
+    height: 45px
     display: flex
     justify-content: center
     align-items: center
     margin: 10px 0
-    border: 1px solid grey
+    border: 1px solid rgba(0, 0, 0, 0.2)
     box-sizing: border-box
+    border-radius: 5px
     
   .select
-    background-color: red
+    background-color: #FDF4EA
