--- a/src/components/Card/Planet.module.sass
+++ b/src/components/Card/Planet.module.sass
@@ -23,8 +23,8 @@
         padding: 0
 
         .planet-list
-            border: 1px solid grey
-            border-radius: 2px
+            border: 1px solid rgba(0, 0, 0, 0.2)
+            border-radius: 5px
             display: flex
             padding: 10px 20px
             box-sizing: border-box
