--- a/src/pages/View/ViewOne.module.sass
+++ b/src/pages/View/ViewOne.module.sass
@@ -21,6 +21,14 @@
     margin-top: 10px
     display: flex
     flex-direction: column
+
+    .planet-change__btn
+      position: absolute
+      padding: 0px 15px 11px 0px
+      box-sizing: border-box
+      color: white
+      font-size: 19px
+      transform: rotate(260deg) rotateX(180deg)
   
-    div:nth-child(2)
+    div:last-child
       margin-top: 20px
