--- a/src/pages/View/ViewTwo.module.sass
+++ b/src/pages/View/ViewTwo.module.sass
@@ -31,6 +31,14 @@
 
       &:focus
         outline: none
+    
+    .view-two__textarea-length
+      text-align: right
+      font-size: 15px
+      color: rgba(0, 0, 0, 0.4)
+
+      .messageDesc_over
+        color: red
 
   .view-two__footer
     margin-top: 15px
