재사용 Input 컴포넌트 디자인 추가

--- a/src/components/Common/Input/Input.module.sass
+++ b/src/components/Common/Input/Input.module.sass
@@ -8,7 +8,7 @@
   &:focus
     outline: none
 
-.view-two__input
+.view-two__input, .change_password-input
   width: 100%
   height: 45px
   border: 2px solid rgba(0,0,0,0.2)
@@ -21,3 +21,7 @@
 
 .selected_input
   display: none
+
+
+.change_password-input::placeholder
+  text-align: center
