재사용 Button 컴포넌트 디자인 추가

--- a/src/components/Common/Button/Button.module.sass
+++ b/src/components/Common/Button/Button.module.sass
@@ -18,3 +18,20 @@
   background-color: #ffffff
   color: #a744ea
   cursor: pointer
+
+.change_password-btn, .cancle_password-btn
+  border-radius: 5px
+  border: none
+  font-weight: bold
+  cursor: pointer
+  padding: 0.8rem 0
+  box-sizing: border-box
+
+.change_password-btn
+  width: 60%
+  background-color: #a744ea
+  color: white
+
+.cancle_password-btn
+  width: 30%
+  background-color: #B3B3B3
