:lipstick: 비밀번호 변경 뷰단 디자인 수정"

--- a/src/pages/Profile/Edit/ChangePassword.module.sass
+++ b/src/pages/Profile/Edit/ChangePassword.module.sass
@@ -6,4 +6,4 @@
     .password-change__btn-footer
         display: flex
         justify-content: space-between
-        margin-top: 15px
+        margin: 15px 0 30px 0
